# Solaredge-PV-Export-Limiter

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  hacs.json  info.md  pyproject.toml  requirements_test.txt
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: lint.yml  release.yml  tests.yml  validate.yml
custom_components/: __init__.py
custom_components/solaredge_pv_export_limiter/: __init__.py  binary_sensor.py  calc.py  config_flow.py  const.py  coordinator.py  entity.py  helpers.py  manifest.json  number.py  select.py  sensor.py  services.yaml  strings.json  switch.py
custom_components/solaredge_pv_export_limiter/lovelace/: pv-limiter-card.js
custom_components/solaredge_pv_export_limiter/translations/: en.json  nl.json
docs/: architecture.md  configuration.md  installation.md  modes.md  release.md  simulator.html  troubleshooting.md  tuning.md
tests/: __init__.py  conftest.py  test_calc.py  test_helpers.py
